--- a/sale.html
+++ b/sale.html
@@ -1092,7 +1092,7 @@
         
         if(print == "print"){
           var WinPrint  = window.open('', '', 'left=0,top=0,width=1300,height=600,toolbar=0,scrollbars=0,status=0');
-        }       
+        }
         $.ajax({
             type: "POST",
             url:"http://150.95.26.163:8080/gitmew/php/save_order.php",
@@ -1102,26 +1102,26 @@
                 //alert(data);
                 if(data != "fail"){
                   if(print == "print"){
-                    var date = datetime.split("");
+                    var date = datetime.split(" ");
                     var time = date[1];
                     var date = date[0];
-                    WinPrint.document.write("<style>@page {size: auto; margin: 0mm;} .txt-right{ margin-right: 1.1cm; font-size: 0.8em; text-align:right; float: right; } .txt-left{ font-size: 0.8em; margin-left: 1.1cm; float: left; width: 60%; }.txt-left-2{ font-size: 0.8em; margin-left: 1.1cm; float: left; width: 80%; } .txt-ct{ font-size: 0.8em; text-align: center; margin-bottom: 0.6em}</style>" +
+                    WinPrint.document.write("<style>@page {size: auto; margin: 0mm;} .txt-right{ margin-right: 0.5cm; font-size: 1em; text-align:right; float: right; } .txt-left{ font-size: 1em; margin-left: 0.5cm; float: left; width: 50%; }.txt-left-2{ font-size: 1em; margin-left: 0.5cm; float: left; width: 40%; } .txt-ct{ font-size: 1em; text-align: center; margin-bottom: 0.2em}</style>" +
                       "<div style='width: 7.5cm;'>" +
                         "<div class='txt-ct'>พรประสิทธิ์</div>" +
                         "<div class='txt-ct'>PPS AUTO</div>" +
                         "<div class='txt-ct'>5 ม.7 ต.ชีน้ำร้าย อ.อินทร์บุรี สิงห์บุรี</div>" +
                         "<div class='txt-ct'>โทร. 065-5028828 , 097-0631169</div>" +
-                        "<div class='txt-ct' style='font-weight: bold;'>ใบเสร็จรับเงิน</div>" +
+                        "<div class='txt-ct' style='font-weight: bold; margin-top: 0.3em;'>ใบเสร็จรับเงิน</div>" +
                         "<div class='txt-left'>ลูกค้า : "+cus_name+"</div>" +
                         "<div class='txt-left'>ประเภท : </div>" +
                         "<div class='txt-left'>เลขที่บิล : " + data + "</div>" +
                         "<div class='txt-left'>วันที่ขาย : "+date+"</div>" +
                         "<div class='txt-right'>เวลา : "+time+"</div>" +
+                        "<div class='txt-ct'>ขอบคุณที่ใช้บริการ</div>" +
                         
                       "<hr style='width: 80%; border-top: 1px dashed; border-bottom: none;'>" +
-                      "<div class='txt-left'>รายการ</div>"+
-                      "<div class='txt-left-2'>จำนวน</div>"+
-                      "<div class='txt-right'>ราคา</div>"+
+                      "<div><div class='txt-left'>รายการ</div>"+
+                      "<div class='txt-left-2'>จำนวน</div></div>"+
 
                       ""+text+""+
 
