--- a/sale.html
+++ b/sale.html
@@ -1112,9 +1112,9 @@
                         "<div class='txt-ct'>5 ม.7 ต.ชีน้ำร้าย อ.อินทร์บุรี สิงห์บุรี</div>" +
                         "<div class='txt-ct'>โทร. 065-5028828 , 097-0631169</div>" +
                         "<div class='txt-ct' style='font-weight: bold; margin-top: 0.3em;'>ใบเสร็จรับเงิน</div>" +
-                        "<div class='txt-left'>ลูกค้า : "+cus_name+"</div>" +
-                        "<div class='txt-left'>ประเภท : </div>" +
-                        "<div class='txt-left'>เลขที่บิล : " + data + "</div>" +
+                        "<div class='txt-left'>ลูกค้า : "+cus_name+"</div><div class='txt-right'></div>" +
+                        "<div class='txt-left'>ประเภท : </div></div><div class='txt-right'></div>" +
+                        "<div class='txt-left'>เลขที่บิล : " + data + "</div></div><div class='txt-right'></div>" +
                         "<div class='txt-left'>วันที่ขาย : "+date+"</div>" +
                         "<div class='txt-right'>เวลา : "+time+"</div>" +
                         "<div class='txt-ct'>ขอบคุณที่ใช้บริการ</div>" +
